# codac

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  README.md  build.sh  build_perso.sh  check_tests.sh  doc.sh  make.sh  tubex-config.cmake  wscript
doc/: CMakeLists.txt  Makefile
doc/api/: Doxyfile.in
doc/doc/: api_technical_doc.rst  changelog.rst  conf.py.in  faq.rst  index.rst  toctree.rst
doc/doxygen/: Doxyfile
doc/old_sources/: graphics.rst
doc/source/: 01-installation.rst  02-start-project.rst  basics.rst  conf.py  development.rst  graphics.rst  how_to.rst  index.rst  installation.rst  introduction.rst  theory.rst
doc/user_manual/: conf.py.in  index.rst  toctree.rst
examples/basics/: CMakeLists.txt
examples/brunovsky/: CMakeLists.txt  main.cpp
examples/cpp/: CMakeLists.txt
examples/linobs/: CMakeLists.txt  main.cpp
examples/robotics/: CMakeLists.txt
examples/solver/: CMakeLists.txt
python/: CMakeLists.txt  codac2_py_core.cpp  codac2_py_core.h  codac2_py_doc.h  codac2_py_graphics.cpp  codac2_py_matlab.h  codac2_py_unsupported.cpp  codac_py.cpp  codac_py_codac2.cpp  codac_py_core.cpp  codac_py_unsupported.cpp  codac_type_caster.h  main.cpp  pyIbex_type_caster.h  pybind11gen.py  pyibex_VIBesFig.cpp  pyibex_VIBesFig_docs.h  pyibex_export_Contractors.cpp  pyibex_export_CtcDeriv_docs.h  pyibex_export_CtcEval_docs.h  pyibex_export_Ctc_docs.h  pyibex_export_Function.cpp  pyibex_export_Slice.cpp  pyibex_export_Slice_docs.h  pyibex_export_Trajectory.cpp  pyibex_export_TrajectoryVector_docs.h  pyibex_export_Trajectory_docs.h  pyibex_export_Tube.cpp  pyibex_export_TubeVector.cpp  pyibex_export_TubeVector_docs.h  pyibex_export_Tube_docs.h  pyibex_export_VIBesFigTubeVector_docs.h  pyibex_tube.cpp  setup.py.in  tubex_py.cpp  tubex_py_ContractorNetwork.cpp  tubex_py_ContractorNetwork_docs.h  tubex_py_CtcConstell_docs.h  tubex_py_CtcDist_docs.h  tubex_py_CtcFunction_docs.h  (+19 more)
python/codac/: __init__.py
python/codac4matlab/: __init__.py
python/core/: __init__.py
python/pyibex_tube/: __init__.py
python/pytubex/: __init__.py
python/src/: codac2_py_matlab.h
python/tubex_lib/: __init__.py
src/: CMakeLists.txt  Tube.cpp  Tube.h  Tube_base.cpp  Tube_ctc.cpp  Tube_integration.cpp
src/3rd/: CMakeLists.txt
src/arithmetic/: old_tubex_operators.cpp  old_tubex_operators_unary.cpp  old_tubex_operators_unary.h  tubex_Arithmetic.cpp  tubex_Arithmetic.h
src/contractor/: temp_tubex_CtcDeriv.cpp  temp_tubex_CtcDeriv.h  temp_tubex_CtcHC4.h  temp_tubex_CtcPicard.cpp  tubex_Ctc.cpp  tubex_Ctc.h  tubex_CtcArithmetic.cpp  tubex_CtcArithmetic.h  tubex_CtcCompo.cpp  tubex_CtcCompo.h  tubex_CtcDelay.cpp  tubex_CtcDelay.h  tubex_CtcDeriv.cpp  tubex_CtcDeriv.h  tubex_CtcDiff.cpp  tubex_CtcDiff.h  tubex_CtcEval.cpp  tubex_CtcEval.h  tubex_CtcHC4.cpp  tubex_CtcHC4.h  tubex_CtcIntertemp.cpp  tubex_CtcIntertemp.h  tubex_CtcOut.cpp  tubex_CtcOut.h  tubex_CtcPicard.cpp  tubex_CtcPicard.h
src/contractors/: temp_tubex_CtcDelay.cpp  temp_tubex_CtcDelay.h  tubex_Ctc.cpp  tubex_Ctc.h  tubex_CtcDelay.cpp  tubex_CtcDelay.h  tubex_CtcDeriv.cpp  tubex_CtcDeriv.h  tubex_CtcEval.cpp  tubex_CtcEval.h  tubex_CtcHC4.cpp  tubex_CtcHC4.h  tubex_CtcPicard.cpp  tubex_CtcPicard.h
src/core/: CMakeLists.txt  CMakeLists.txt_old
src/dynamics/: tubex_DynamicalItem.h  tubex_Trajectory.cpp  tubex_Trajectory.h  tubex_TrajectoryVector.cpp  tubex_TrajectoryVector.h  tubex_Tube.cpp  tubex_Tube.h  tubex_TubeSlice.cpp  tubex_TubeSlice.h  tubex_TubeSlice_operators.cpp  tubex_TubeSlice_polygon.cpp  tubex_TubeVector.cpp  tubex_TubeVector.h  tubex_TubeVector_operators.cpp  tubex_Tube_operators.cpp
src/exceptions/: tubex_DimensionException.cpp  tubex_DimensionException.h  tubex_DomainException.cpp  tubex_DomainException.h  tubex_EmptyException.cpp  tubex_EmptyException.h  tubex_SamplingException.cpp  tubex_SamplingException.h  tubex_SlicingException.h  tubex_StructureException.cpp  tubex_StructureException.h
src/functions/: tubex_DelayFunction.cpp  tubex_DelayFunction.h  tubex_Fnc.cpp  tubex_Fnc.h  tubex_Function.cpp  tubex_Function.h
src/geometry/: tubex_ConvexPolygon.cpp  tubex_ConvexPolygon.h  tubex_Edge.cpp  tubex_Edge.h  tubex_Point.cpp  tubex_Point.h  tubex_Polygon.cpp  tubex_Polygon.h
src/graphics/: CMakeLists.txt  VibesFigure.cpp  VibesFigure.h  VibesFigure_Tube.cpp  VibesFigure_Tube.h  codac2_empty.cpp  tubex_VibesFigure.cpp  tubex_VibesFigure.h  tubex_VibesFigure_Polygon.cpp  tubex_VibesFigure_Polygon.h  tubex_VibesFigure_Tube.cpp  tubex_VibesFigure_Tube.h
src/robotics/: CMakeLists.txt
src/serializ/: tubex_IntervalSerialization.cpp  tubex_IntervalSerialization.h  tubex_TrajectorySerialization.cpp  tubex_TrajectorySerialization.h  tubex_TrajectoryVectorSerialization.cpp  tubex_TrajectoryVectorSerialization.h  tubex_TubeSerialization.cpp  tubex_TubeSerialization.h  tubex_TubeVectorSerialization.cpp  tubex_TubeVectorSerialization.h
src/set/: old_tubex_Polygon.cpp  old_tubex_Polygon.h  tubex_ConvexPolygon.cpp  tubex_ConvexPolygon.h  tubex_Point.h  tubex_Polygon.cpp  tubex_Polygon.h
src/solver/: CMakeLists.txt  temp_tubex_Solver.cpp  temp_tubex_Solver.h  tubex_Solver.cpp  tubex_Solver.h
src/sympy/: CMakeLists.txt  codac2_sympy._testcpp  codac2_sympy.cpp  codac2_sympy_empty.cpp  codac2_sympy_empty.h
src/tools/: CMakeLists.txt  serialization.cpp  serialization.h  tubex_IntervalSerialization.cpp  tubex_IntervalSerialization.h  tubex_Serialization.cpp  tubex_TrajectorySerialization.cpp  tubex_TrajectorySerialization.h  tubex_TubeSerialization.cpp  tubex_TubeSerialization.h
src/tube/: CMakeLists.txt  DomainError.cpp  DomainError.h  Tube.h  Tube_arithmetic.cpp  (+43 more)
tests/: CMakeLists.txt  main.cpp  tests.h  tests_arithmetic.cpp  tests_cases.hpp  tests_cn.cpp  tests_contractors.cpp  tests_ctc_delay.cpp  tests_ctc_deriv.cpp  tests_ctc_eval.cpp  tests_ctc_picard.cpp  tests_definition.cpp  tests_exceptions.cpp  tests_functions.cpp  tests_integration.cpp  tests_operators.cpp  tests_polygons.cpp  tests_serialization.cpp  tests_slicesstructure.cpp  tests_trajectory.cpp  tests_values.cpp
(+2450 files in other folders)
